Set default SECRET_KEY for CI

--- a/tox.ini
+++ b/tox.ini
@@ -10,7 +10,7 @@ commands =
 [testenv]
 description = Default testing environment, run unit test suite
 deps = -rrequirements.txt
-passenv = TRAVIS* PG* SQLALCHEMY_DATABASE_TEST_URI PERSISTENCE_DIR FLASK_APP
+passenv = TRAVIS* PG* SQLALCHEMY_DATABASE_TEST_URI PERSISTENCE_DIR FLASK_APP SECRET_KEY
 whitelist_externals = /bin/bash
 commands =
     {[base]commands}
