--- a/.travis.yml
+++ b/.travis.yml
@@ -17,6 +17,7 @@ env:
     - TOXENV=py27
   global:
     - FLASK_APP="$(readlink -f manage.py)"
+    - SECRET_KEY="$(openssl rand -base64 32)"
     - PORTAL_VERSION="$(python setup.py --version)"
 
     - PGUSER=postgres
