Add production example

--- a/docker/default.env
+++ b/docker/default.env
@@ -13,3 +13,6 @@
 # https://docs.docker.com/compose/reference/envvars/#compose_project_name
 # Containers started with the below value will have their names prefixed with it
 # COMPOSE_PROJECT_NAME=portal
+
+# Use production overrides
+# COMPOSE_FILE=docker-compose.yaml:docker-compose.prod.yaml
