--- a/docker/Dockerfile.build
+++ b/docker/Dockerfile.build
@@ -25,7 +25,7 @@ ENV \
     ARTIFACT_DIR="${ARTIFACT_DIR:-/tmp/artifacts}"
 
 RUN \
-    pip install --upgrade pip setuptools && \
+    pip install --upgrade setuptools && \
     pip install wheel && \
     pip install make-deb && \
     mkdir --parents "${ARTIFACT_DIR}"
