--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,6 @@ portal/translations/
 node_env/
 portal/node_modules/
 portal/package-lock.json
+
+# auto-generated JS eslint config when linting JS files (via command eslint) at development
+portal/static/js/.eslintrc.js
