Don't use newest version of pip when building portal debian package
Newer pip prefers installing portal as wheel (bdist_wheel) and pkginfo can't read package metadata in egg-info directory

--- a/debian/rules
+++ b/debian/rules
@@ -1,6 +1,6 @@
 #!/usr/bin/make -f
 
-DH_VIRTUALENV_ARGS = --preinstall='pip>=8' --preinstall='setuptools>=12'
+DH_VIRTUALENV_ARGS = --preinstall='pip>=8,<10.0' --preinstall='setuptools>=12'
 
 
 distclean:
