--- a/portal/package.json
+++ b/portal/package.json
@@ -4,7 +4,7 @@
   "description": "fills the front-end needs including incorporating i18next for frontend translation needs",
   "main": "main.js",
   "scripts": {
-    "build": "gulp --gulpfile development_gulpfile.js main", //call 'npm run-script build' will build minify script file, if need to 
+    "build": "gulp --gulpfile development_gulpfile.js main",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Amy",
