--- a/portal/config/eproms/AppText.json
+++ b/portal/config/eproms/AppText.json
@@ -61,6 +61,11 @@
       "resourceType": "AppText"
     },
     {
+      "custom_text": "{config[LR_ORIGIN]}/c/portal/truenth/asset/detailed?version=latest&uuid=958a83c7-3e3f-d147-ee38-2980dafb1396&editorUrl=true",
+      "name": "Initial Consent Terms URL",
+      "resourceType": "AppText"
+    },
+    {
       "custom_text": "{config[LR_ORIGIN]}/c/portal/truenth/asset/detailed?version=latest&uuid=d3a28016-656a-36c1-0201-fa1571c42b32&editorUrl=true",
       "name": "TrueNTH Global Registry organization consent URL",
       "resourceType": "AppText"
