Use celery app based on test-configured flask app during testing

--- a/tox.ini
+++ b/tox.ini
@@ -5,7 +5,7 @@ skip_missing_interpreters = True
 [base]
 description = Common virtual environment for starting services before testing
 commands =
-    bash -c "if [[ -v TRAVIS ]]; then celery worker --detach --app portal.celery_worker.celery --loglevel=info;fi"
+    bash -c "if [[ -v TRAVIS ]]; then celery worker --detach --app portal.celery_worker.test_celery --loglevel info;fi"
 
 [testenv]
 description = Default testing environment, run unit test suite
