Add python3 tox environment

--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py27,translations,docs,ui,build-artifacts
+envlist = py27,translations,docs,ui,build-artifacts,py34
 skip_missing_interpreters = True
 
 [base]
@@ -14,7 +14,8 @@ passenv = TRAVIS* PG* SQLALCHEMY_DATABASE_TEST_URI PERSISTENCE_DIR FLASK_APP SEC
 whitelist_externals = /bin/bash
 commands =
     {[base]commands}
-    nosetests -v --with-cover --cover-package=portal --cover-xml --cover-xml-file "{toxinidir}/coverage.xml"  --exclude test_integration []
+    py27: nosetests -v --with-cover --cover-package=portal --cover-xml --cover-xml-file "{toxinidir}/coverage.xml" --exclude test_integration []
+    py34: nosetests -v tests.test_dict_tools []
 
 [testenv:docs]
 description = Test documentation generation
