Allow failure on python 3 testing job

--- a/.travis.yml
+++ b/.travis.yml
@@ -59,6 +59,7 @@ matrix:
         sauce_connect: true
   allow_failures:
     - env: TOXENV=ui
+    - env: TOXENV=py34
 
 before_install:
   # Fetch all remote branches instead of just the currently checked out one
