--- a/.travis.yml
+++ b/.travis.yml
@@ -42,6 +42,8 @@ env:
 matrix:
   include:
     - env: TOXENV=py27
+    - env: TOXENV=py34
+      python: "3.4"
     - env: TOXENV=translations PERSISTENCE_DIR="gil"
     - env: TOXENV=translations PERSISTENCE_DIR="eproms"
     - env: TOXENV=docs
@@ -57,6 +59,7 @@ matrix:
         sauce_connect: true
   allow_failures:
     - env: TOXENV=ui
+    - env: TOXENV=py34
 
 before_install:
   # Fetch all remote branches instead of just the currently checked out one
