--- a/.editorconfig
+++ b/.editorconfig
@@ -1,5 +1,8 @@
 # https://editorconfig.org/
+
 [*.py]
+# isort settings
+# https://github.com/timothycrosley/isort/wiki/isort-Settings
 line_length=79
 multi_line_output=3
 include_trailing_comma=True
