Extract content from text emails

--- a/instance/eproms.babel.cfg
+++ b/instance/eproms.babel.cfg
@@ -13,4 +13,5 @@
 
 [python: **.py]
 [jinja2: **/templates/**.html]
+[jinja2: templates/flask_user/emails/eproms_*.txt]
 extensions=jinja2.ext.autoescape,jinja2.ext.with_
