--- a/instance/gil.babel.cfg
+++ b/instance/gil.babel.cfg
@@ -9,4 +9,5 @@
 
 [python: **.py]
 [jinja2: **/templates/**.html]
+[jinja2: templates/flask_user/emails/truenth_*.txt]
 extensions=jinja2.ext.autoescape,jinja2.ext.with_
