--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -27,10 +27,10 @@ services:
     depends_on:
       - db
       - redis
-      - celery
+      - celeryworker
       - celerybeat
 
-  celery:
+  celeryworker:
     <<: *service_base
     command: bash -c '
       env &&
@@ -53,7 +53,7 @@ services:
         --pidfile /tmp/celerybeat.pid
       '
     depends_on:
-      - celery
+      - celeryworker
 
   redis:
     image: redis
