Use py.test for running selenium tests

--- a/tox.ini
+++ b/tox.ini
@@ -27,7 +27,7 @@ description = Run selenium tests
 passenv = SAUCE_* {[testenv]passenv}
 commands =
     {[base]commands}
-    nosetests -v --cover-package=portal tests.test_integration []
+    py.test -v tests/test_integration.py []
 
 [testenv:build-artifacts]
 description = Build docker artifacts and prerequisites (debian package)
