Only run ui tests when option passed

--- a/tox.ini
+++ b/tox.ini
@@ -27,7 +27,7 @@ description = Run selenium tests
 passenv = SAUCE_* {[testenv]passenv}
 commands =
     {[base]commands}
-    py.test -v tests/test_integration.py []
+    py.test -v tests/test_integration.py --include-ui-testing []
 
 [testenv:build-artifacts]
 description = Build docker artifacts and prerequisites (debian package)
