Use py.test as main test runner

--- a/tox.ini
+++ b/tox.ini
@@ -9,12 +9,14 @@ commands =
 
 [testenv]
 description = Default testing environment, run unit test suite
-deps = -rrequirements.txt
+deps =
+    -rrequirements.txt
+    pytest-cov
 passenv = TRAVIS* PG* SQLALCHEMY_DATABASE_TEST_URI PERSISTENCE_DIR FLASK_APP SECRET_KEY
 whitelist_externals = /bin/bash
 commands =
     {[base]commands}
-    py27: nosetests -v --with-cover --cover-package=portal --cover-xml --cover-xml-file "{toxinidir}/coverage.xml" --exclude test_integration []
+    py27: py.test -v --cov portal --cov-report xml:"{toxinidir}/coverage.xml" []
     py34: py.test -v tests/test_dict_tools.py tests/test_date_tools.py tests/test_access_on_verify.py tests/test_access_url.py tests/test_address.py tests/test_app_text.py []
 
 [testenv:docs]
