--- a/tox.ini
+++ b/tox.ini
@@ -15,7 +15,7 @@ whitelist_externals = /bin/bash
 commands =
     {[base]commands}
     py27: nosetests -v --with-cover --cover-package=portal --cover-xml --cover-xml-file "{toxinidir}/coverage.xml" --exclude test_integration []
-    py34: nosetests -v tests.test_dict_tools tests.test_date_tools tests.test_access_on_verify tests.test_access_url tests.test_address tests.test_app_text []
+    py34: nosetests -v tests.test_dict_tools tests.test_date_tools tests.test_access_on_verify tests.test_access_url tests.test_address tests.test_app_text test_assessment_engine.py []
 
 [testenv:docs]
 description = Test documentation generation
