Move project metadata to setup.cfg

--- a/setup.cfg
+++ b/setup.cfg
@@ -2,3 +2,21 @@
 # https://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files
 [metadata]
 name = portal
+description = TrueNTH Shared Services
+long_description = TrueNTH Shared Services RESTful API, to be used by TrueNTH intervention applications. This API attempts to conform with the HL7 FHIR specification as much as is reasonable.
+url = https://github.com/uwcirg/true_nth_usa_portal
+author = CIRG, University of Washington
+author_email = truenth-dev@uw.edu
+maintainer = CIRG, University of Washington
+maintainer_email= truenth-dev@uw.edu
+license = BSD 3-Clause License
+classifiers =
+    Environment :: Web Environment
+    Intended Audience :: Developers
+    Intended Audience :: Healthcare Industry
+    License :: OSI Approved :: BSD License
+    Operating System :: OS Independent
+    Programming Language :: Python
+    Topic :: Scientific/Engineering :: Bio-Informatics
+    Topic :: Scientific/Engineering :: Medical Science Apps
+platforms = any
