--- a/setup.cfg
+++ b/setup.cfg
@@ -20,3 +20,7 @@ classifiers =
     Topic :: Scientific/Engineering :: Bio-Informatics
     Topic :: Scientific/Engineering :: Medical Science Apps
 platforms = any
+
+[options]
+zip_safe = False
+include_package_data = True
