--- a/setup.cfg
+++ b/setup.cfg
@@ -24,3 +24,34 @@ platforms = any
 [options]
 zip_safe = False
 include_package_data = True
+install_requires =
+  Authomatic
+  celery
+  enum34
+  Flask
+  Flask-Babel
+  Flask-Dogpile-Cache
+  Flask-Migrate
+  Flask-OAuthlib
+  Flask-Recaptcha
+  Flask-SQLAlchemy
+  Flask-Session
+  Flask-Swagger
+  Flask-Testing
+  Flask-User
+  Flask-WebTest
+  fuzzywuzzy
+  gunicorn
+  jsonschema
+  oauthlib
+  pkginfo
+  polib
+  psycopg2
+  python-dateutil
+  python-Levenshtein
+  redis
+  requests-cache
+  regex
+  sphinx
+  sphinx_rtd_theme
+  validators
