--- a/setup.cfg
+++ b/setup.cfg
@@ -55,3 +55,13 @@ install_requires =
   sphinx
   sphinx_rtd_theme
   validators
+
+[options.extras_require]
+dev =
+  coverage
+  nose
+  page_objects
+  selenium
+  swagger_spec_validator
+  tox
+  xvfbwrapper
