Only upload coverage from unit test job

--- a/.travis.yml
+++ b/.travis.yml
@@ -78,7 +78,11 @@ script:
   - tox
 
 after_success:
-  - if [ -n "$CODACY_PROJECT_TOKEN" ] && [ -f "coverage.xml" ] && [ "$GIT_BRANCH" = "develop" ]; then
+  - if
+    [ -n "$CODACY_PROJECT_TOKEN" ] &&
+    [ -f "coverage.xml" ] &&
+    [ "$TOXENV" = "py27" ] &&
+    [ "$GIT_BRANCH" = "develop" ]; then
       pip install codacy-coverage ;
       python-codacy-coverage -r coverage.xml ;
     fi
