Use same py.test command for py2/3 unit testing

--- a/tox.ini
+++ b/tox.ini
@@ -16,8 +16,7 @@ passenv = TRAVIS* PG* SQLALCHEMY_DATABASE_TEST_URI PERSISTENCE_DIR FLASK_APP SEC
 whitelist_externals = /bin/bash
 commands =
     {[base]commands}
-    py27: py.test --cov portal --cov-report xml:"{toxinidir}/coverage.xml" []
-    py34: py.test []
+    py.test --cov portal --cov-report xml:"{toxinidir}/coverage.xml" []
 
 [testenv:docs]
 description = Test documentation generation
