--- a/setup.cfg
+++ b/setup.cfg
@@ -1,3 +1,4 @@
+# pyup: ignore file
 # setup.py configuration file
 # https://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files
 [metadata]
