No progress bar

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,4 +1,3 @@
-# pyup: ignore file
 # setup.py configuration file
 # https://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files
 [metadata]
@@ -70,3 +69,4 @@ dev =
 
 [tool:pytest]
 addopts = --color yes --verbose
+console_output_style = classic
