Cleanup test invocation (#2366)
* Move verbose option to py.test config

* Only upload coverage from unit test job

* Use same py.test command for py2/3 unit testing

* Always use color in py.test

* No progress bar

* Re-add pyup directive

--- a/setup.cfg
+++ b/setup.cfg
@@ -67,3 +67,7 @@ dev =
   swagger_spec_validator
   tox
   xvfbwrapper
+
+[tool:pytest]
+addopts = --color yes --verbose
+console_output_style = classic
