--- a/tox.ini
+++ b/tox.ini
@@ -16,8 +16,7 @@ passenv = TRAVIS* PG* SQLALCHEMY_DATABASE_TEST_URI PERSISTENCE_DIR FLASK_APP SEC
 whitelist_externals = /bin/bash
 commands =
     {[base]commands}
-    py27: py.test -v --cov portal --cov-report xml:"{toxinidir}/coverage.xml" []
-    py34: py.test -v []
+    py.test --cov portal --cov-report xml:"{toxinidir}/coverage.xml" []
 
 [testenv:docs]
 description = Test documentation generation
@@ -29,7 +28,7 @@ description = Run selenium tests
 passenv = SAUCE_* {[testenv]passenv}
 commands =
     {[base]commands}
-    py.test -v tests/test_integration.py --include-ui-testing []
+    py.test tests/test_integration.py --include-ui-testing []
 
 [testenv:build-artifacts]
 description = Build docker artifacts and prerequisites (debian package)
