--- a/.travis.yml
+++ b/.travis.yml
@@ -76,6 +76,15 @@ install:
   # Install dependencies first
   - tox --notest
 
+  # Start celery from tox virtual environment
+  - if [ -f "${TRAVIS_BUILD_DIR}/.tox/${TOXENV}/bin/celery" ]; then
+      PATH="${TRAVIS_BUILD_DIR}/.tox/${TOXENV}/bin/"
+      celery worker
+        --detach
+        --app portal.celery_worker.celery
+        --loglevel info
+      ;
+    fi
 
 script:
   - tox
