Ignore localhost cookie warning during tests

--- a/setup.cfg
+++ b/setup.cfg
@@ -71,3 +71,5 @@ dev =
 [tool:pytest]
 addopts = --color yes --verbose
 console_output_style = classic
+filterwarnings =
+    ignore:^"localhost" is not a valid cookie domain, it must contain a.*:Warning
