--- a/.travis.yml
+++ b/.travis.yml
@@ -73,6 +73,18 @@ before_install:
 
 install:
   - pip install tox
+  # Install dependencies first
+  - tox --notest
+
+  # Start celery from tox virtual environment
+  - if [ -f "${TRAVIS_BUILD_DIR}/.tox/${TOXENV}/bin/celery" ]; then
+      PATH="${TRAVIS_BUILD_DIR}/.tox/${TOXENV}/bin/"
+      celery worker
+        --detach
+        --app portal.celery_worker.celery
+        --loglevel info
+      ;
+    fi
 
 script:
   - tox
