Move scripts section to setup.cfg

--- a/setup.cfg
+++ b/setup.cfg
@@ -25,6 +25,10 @@ platforms = any
 
 [options]
 packages = find:
+scripts =
+    manage.py
+    wsgi.py
+    docker/remap_envvars.py
 zip_safe = False
 include_package_data = True
 install_requires =
