--- a/setup.cfg
+++ b/setup.cfg
@@ -22,6 +22,7 @@ classifiers =
     Topic :: Scientific/Engineering :: Bio-Informatics
     Topic :: Scientific/Engineering :: Medical Science Apps
 platforms = any
+version = attr: setuptools_scm.get_version
 
 [options]
 packages = find:
@@ -31,6 +32,8 @@ scripts =
     docker/remap_envvars.py
 zip_safe = False
 include_package_data = True
+setup_requires =
+    setuptools_scm
 install_requires =
     Authomatic
     celery
