--- a/tox.ini
+++ b/tox.ini
@@ -7,9 +7,8 @@ description = Default testing environment, run unit test suite
 deps =
     -rrequirements.txt
     pytest-cov
-    pytest-xdist
-passenv = TRAVIS* PG* SQLALCHEMY_DATABASE_TEST_URI PERSISTENCE_DIR FLASK_APP SECRET_KEY TEST_JOB_COUNT
-commands = py.test -n {env:TEST_JOB_COUNT:} --cov portal --cov-report xml:"{toxinidir}/coverage.xml" []
+passenv = TRAVIS* PG* SQLALCHEMY_DATABASE_TEST_URI PERSISTENCE_DIR FLASK_APP SECRET_KEY
+commands = py.test --cov portal --cov-report xml:"{toxinidir}/coverage.xml" []
 
 [testenv:docs]
 description = Test documentation generation
