--- a/.travis.yml
+++ b/.travis.yml
@@ -41,8 +41,8 @@ env:
 
 matrix:
   include:
-    - env: TOXENV=py27 TEST_JOB_COUNT=2
-    - env: TOXENV=py34 TEST_JOB_COUNT=2
+    - env: TOXENV=py27
+    - env: TOXENV=py34
       python: "3.4"
     - env: TOXENV=translations PERSISTENCE_DIR="gil"
     - env: TOXENV=translations PERSISTENCE_DIR="eproms"
