--- a/.travis.yml
+++ b/.travis.yml
@@ -64,16 +64,26 @@ before_install:
   # Fetch all remote branches instead of just the currently checked out one
   - git config remote.origin.fetch "+refs/heads/*:refs/remotes/origin/*"
 
-  - createdb
-      --owner "$PGUSER"
-      --username "$PGUSER"
-    "$PGDATABASE"
+  # Create a database for each py.test worker if TEST_JOB_COUNT set
+  - if [ -n "$TEST_JOB_COUNT" ]; then
+      for ((i=0; i<$TEST_JOB_COUNT; i++)); do
+        createdb
+          --owner "$PGUSER"
+          --username "$PGUSER"
+        "${PGDATABASE}${i}" ;
+      done ;
+    else
+      createdb
+        --owner "$PGUSER"
+        --username "$PGUSER"
+      "$PGDATABASE" ;
+    fi
 
   - pip install --upgrade pip setuptools
 
 install:
   - pip install tox
-  # Install dependencies first
+  # Install test dependencies only
   - tox --notest
 
   # Start celery from tox virtual environment
@@ -102,7 +112,7 @@ after_success:
 before_deploy:
   - ./bin/docker-login.sh
 
-# Only deploy from default virtual env TravisCI job
+# Only deploy from "build-artifacts" tox environment and corresponding TravisCI job
 deploy:
   - provider: script
     skip_cleanup: true
