Cleanup setup.py (#2377)
* Fix indentation

* Move scripts section to setup.cfg

* Move setuptools-scm config to setup.cfg

* Add comment

* Rewrite comments

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,7 @@
 # pyup: ignore file
 # setup.py configuration file
 # https://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files
+
 [metadata]
 name = portal
 description = TrueNTH Shared Services
@@ -21,51 +22,58 @@ classifiers =
     Topic :: Scientific/Engineering :: Bio-Informatics
     Topic :: Scientific/Engineering :: Medical Science Apps
 platforms = any
+version = attr: setuptools_scm.get_version
 
 [options]
 packages = find:
+scripts =
+    manage.py
+    wsgi.py
+    docker/remap_envvars.py
 zip_safe = False
 include_package_data = True
+setup_requires =
+    setuptools_scm
 install_requires =
-  Authomatic
-  celery
-  enum34
-  Flask
-  Flask-Babel
-  Flask-Dogpile-Cache
-  Flask-Migrate
-  Flask-OAuthlib
-  Flask-Recaptcha
-  Flask-SQLAlchemy
-  Flask-Session
-  Flask-Swagger
-  Flask-Testing
-  Flask-User
-  Flask-WebTest
-  fuzzywuzzy
-  gunicorn
-  jsonschema
-  oauthlib
-  polib
-  psycopg2
-  python-dateutil
-  python-Levenshtein
-  redis
-  requests-cache
-  regex
-  sphinx
-  sphinx_rtd_theme
-  validators
+    Authomatic
+    celery
+    enum34
+    Flask
+    Flask-Babel
+    Flask-Dogpile-Cache
+    Flask-Migrate
+    Flask-OAuthlib
+    Flask-Recaptcha
+    Flask-SQLAlchemy
+    Flask-Session
+    Flask-Swagger
+    Flask-Testing
+    Flask-User
+    Flask-WebTest
+    fuzzywuzzy
+    gunicorn
+    jsonschema
+    oauthlib
+    polib
+    psycopg2
+    python-dateutil
+    python-Levenshtein
+    redis
+    requests-cache
+    regex
+    sphinx
+    sphinx_rtd_theme
+    validators
 
 [options.extras_require]
 dev =
-  coverage
-  nose
-  page_objects
-  selenium
-  swagger_spec_validator
-  tox
-  xvfbwrapper
+    coverage
+    nose
+    page_objects
+    selenium
+    swagger_spec_validator
+    tox
+    xvfbwrapper
 
 [tool:pytest]
 addopts = --color yes --verbose
