reverted tox.ini to match develop

--- a/tox.ini
+++ b/tox.ini
@@ -8,11 +8,7 @@ deps =
     -rrequirements.txt
     pytest-cov
 passenv = TRAVIS* PG* SQLALCHEMY_DATABASE_TEST_URI PERSISTENCE_DIR FLASK_APP SECRET_KEY
-whitelist_externals = /bin/bash
-commands =
-    {[base]commands}
-    py27: py.test -v --cov portal --cov-report xml:"{toxinidir}/coverage.xml" []
-    py34: py.test -v tests/test_dict_tools.py tests/test_date_tools.py tests/test_access_on_verify.py tests/test_access_url.py tests/test_address.py tests/test_app_text.py tests/test_assessment_engine.py tests/test_assessment_status.py tests/test_audit.py tests/test_auth.py tests/test_clinical.py []
+commands = py.test --cov portal --cov-report xml:"{toxinidir}/coverage.xml" []
 
 [testenv:docs]
 description = Test documentation generation
