--- a/requirements.txt
+++ b/requirements.txt
@@ -7,8 +7,8 @@ alembic==0.9.10
 amqp==2.3.2
 anyjson==0.3.3
 argcomplete==1.9.4
-Authomatic==0.1.0.post1
-Babel==2.6.0
+authomatic==0.1.0.post1
+babel==2.6.0
 backports.shutil-get-terminal-size==1.0.0
 bcrypt==3.1.4
 beautifulsoup4==4.6.0
@@ -22,22 +22,22 @@ decorator==4.2.1
 docopt==0.6.2
 docutils==0.14
 dogpile.cache==0.6.6
-Flask==1.0.2
-Flask-Babel==0.11.2
+flask==1.0.2
+flask-babel==0.11.2
 git+https://github.com/uwcirg/flask-dogpile-cache.git@0.3.2#egg=flask-dogpile-cache
-Flask-Login==0.4.1
-Flask-Mail==0.9.1
-Flask-Migrate==2.2.1
-Flask-OAuthlib==0.9.5
-Flask-ReCaptcha==0.4.2
-Flask-Script==2.0.6
-Flask-Session==0.3.1
-Flask-SQLAlchemy==2.3.2
+flask-login==0.4.1
+flask-mail==0.9.1
+flask-migrate==2.2.1
+flask-oauthlib==0.9.5
+flask-recaptcha==0.4.2
+flask-script==2.0.6
+flask-session==0.3.1
+flask-sqlalchemy==2.3.2
 flask-swagger==0.2.13
-Flask-Testing==0.7.1
-Flask-User==0.6.21 # pyup: <0.7 # pin until 1.0 is ready for prod
-Flask-WebTest==0.0.9
-Flask-WTF==0.14.2
+flask-testing==0.7.1
+flask-user==0.6.21 # pyup: <0.7 # pin until 1.0 is ready for prod
+flask-webtest==0.0.9
+flask-wtf==0.14.2
 functools32==3.2.3.post2;python_version < '3'
 future==0.16.0
 fuzzywuzzy==0.16.0
@@ -46,11 +46,11 @@ imagesize==1.0.0
 ipython-genutils==0.2.0
 itsdangerous==0.24
 jedi==0.12.1
-Jinja2==2.10
+jinja2==2.10
 jsonschema==2.6.0
 kombu==4.2.1
-Mako==1.0.7
-MarkupSafe==1.0
+mako==1.0.7
+markupsafe==1.0
 nose==1.3.7
 oauthlib==1.1.2 # pyup: <= 1.1.2  # See oauthlib comment below
 page-objects==1.1.0
@@ -67,13 +67,13 @@ py==1.5.4
 pycparser==2.18
 pycrypto==2.6.1
 pyflakes==2.0.0
-Pygments==2.2.0
+pygments==2.2.0
 pytest==3.6.3
 python-dateutil==2.7.3
 python-editor==1.0.3
-python-Levenshtein==0.12.0
+python-levenshtein==0.12.0
 pytz==2018.5
-PyYAML==3.13
+pyyaml==3.13
 redis==2.10.6
 requests==2.19.1
 requests-cache==0.4.13
@@ -84,9 +84,9 @@ simplegeneric==0.8.1
 six==1.11.0
 snowballstemmer==1.2.1
 speaklater==1.3
-Sphinx==1.7.5
+sphinx==1.7.5
 sphinx-rtd-theme==0.4.0
-SQLAlchemy==1.2.9
+sqlalchemy==1.2.9
 swagger-spec-validator==2.3.1
 tox==3.1.2
 traitlets==4.3.2
@@ -95,10 +95,10 @@ vine==1.1.4
 virtualenv==16.0.0
 waitress==1.1.0
 wcwidth==0.1.7
-WebOb==1.8.2
-WebTest==2.0.30
-Werkzeug==0.14.1
-WTForms==2.2.1
+webob==1.8.2
+webtest==2.0.30
+werkzeug==0.14.1
+wtforms==2.2.1
 xvfbwrapper==0.2.9
 -e .
 
