Update requirements.txt with new dependencies

--- a/requirements.txt
+++ b/requirements.txt
@@ -5,24 +5,22 @@
 alabaster==0.7.11
 alembic==0.9.10
 amqp==2.3.2
-anyjson==0.3.3
-argcomplete==1.9.4
 authomatic==0.1.0.post1
 babel==2.6.0
-backports.shutil-get-terminal-size==1.0.0
 bcrypt==3.1.4
 beautifulsoup4==4.6.0
 billiard==3.5.0.4
 blinker==1.4
 celery==4.2.0
+certifi==2018.4.16
 cffi==1.11.5
+chardet==3.0.4
 click==6.7
 coverage==4.5.1
 decorator==4.2.1
-docopt==0.6.2
 docutils==0.14
 dogpile.cache==0.6.6
-flask==1.0.2
+enum34==1.1.6
 flask-babel==0.11.2
 git+https://github.com/uwcirg/flask-dogpile-cache.git@0.3.2#egg=flask-dogpile-cache
 flask-login==0.4.1
@@ -30,7 +28,6 @@ flask-mail==0.9.1
 flask-migrate==2.2.1
 flask-oauthlib==0.9.5
 flask-recaptcha==0.4.2
-flask-script==2.0.6
 flask-session==0.3.1
 flask-sqlalchemy==2.3.2
 flask-swagger==0.2.13
@@ -39,13 +36,12 @@ flask-user==0.6.21 # pyup: <0.7 # pin until 1.0 is ready for prod
 flask-webtest==0.0.9
 flask-wtf==0.14.2
 functools32==3.2.3.post2;python_version < '3'
-future==0.16.0
+flask==1.0.2
 fuzzywuzzy==0.16.0
 gunicorn==19.8.1
+idna==2.7
 imagesize==1.0.0
-ipython-genutils==0.2.0
 itsdangerous==0.24
-jedi==0.12.1
 jinja2==2.10
 jsonschema==2.6.0
 kombu==4.2.1
@@ -53,48 +49,43 @@ mako==1.0.7
 markupsafe==1.0
 nose==1.3.7
 oauthlib==1.1.2 # pyup: <= 1.1.2  # See oauthlib comment below
+packaging==17.1
 page-objects==1.1.0
 passlib==1.7.1
-pathlib2==2.3.2
-pexpect==4.6.0
-pickleshare==0.7.4
 pluggy==0.6.0
 polib==1.1.0
-prompt-toolkit==2.0.3
 psycopg2==2.7.5
-ptyprocess==0.6.0
 py==1.5.4
 pycparser==2.18
-pycrypto==2.6.1
-pyflakes==2.0.0
+pycryptodome==3.6.4
 pygments==2.2.0
-pytest==3.6.3
+pyparsing==2.2.0
 python-dateutil==2.7.3
 python-editor==1.0.3
 python-levenshtein==0.12.0
+python-memcached==1.59
 pytz==2018.5
 pyyaml==3.13
 redis==2.10.6
-requests==2.19.1
+regex==2018.06.21
 requests-cache==0.4.13
 requests-oauthlib==1.0.0
-regex==2018.06.21
+requests==2.19.1
 selenium==3.13.0
-simplegeneric==0.8.1
 six==1.11.0
 snowballstemmer==1.2.1
-speaklater==1.3
-sphinx==1.7.5
 sphinx-rtd-theme==0.4.0
+sphinx==1.7.5
+sphinxcontrib-websupport==1.1.0
 sqlalchemy==1.2.9
 swagger-spec-validator==2.3.1
 tox==3.1.2
-traitlets==4.3.2
 validators==0.10.1 # pyup: <=0.10.1 # pin until require_tld supported again
+typing==3.6.4
+urllib3==1.23
 vine==1.1.4
 virtualenv==16.0.0
 waitress==1.1.0
-wcwidth==0.1.7
 webob==1.8.2
 webtest==2.0.30
 werkzeug==0.14.1
