--- a/requirements.txt
+++ b/requirements.txt
@@ -2,29 +2,29 @@
 # See https://github.com/spotify/dh-virtualenv/issues/150
 --no-binary billiard,cffi,psycopg2
 
-alabaster==0.7.11
-alembic==0.9.10
-amqp==2.3.2
+alabaster==0.7.11         # via sphinx
+alembic==0.9.10           # via flask-migrate
+amqp==2.3.2               # via kombu
 authomatic==0.1.0.post1
-babel==2.6.0
-bcrypt==3.1.4
-beautifulsoup4==4.6.0
-billiard==3.5.0.4
-blinker==1.4
+babel==2.6.0              # via flask-babel, sphinx
+bcrypt==3.1.4             # via flask-user
+beautifulsoup4==4.6.0     # via webtest
+billiard==3.5.0.4         # via celery
+blinker==1.4              # via flask-mail, flask-webtest
 celery==4.2.0
-certifi==2018.4.16
-cffi==1.11.5
-chardet==3.0.4
-click==6.7
+certifi==2018.4.16        # via requests
+cffi==1.11.5              # via bcrypt
+chardet==3.0.4            # via requests
+click==6.7                # via flask
 coverage==4.5.1
-decorator==4.2.1
-docutils==0.14
-dogpile.cache==0.6.6
+decorator==4.2.1          # via validators
+docutils==0.14            # via sphinx
+dogpile.cache==0.6.6      # via flask-dogpile-cache
 enum34==1.1.6
 flask-babel==0.11.2
 git+https://github.com/uwcirg/flask-dogpile-cache.git@0.3.2#egg=flask-dogpile-cache
-flask-login==0.4.1
-flask-mail==0.9.1
+flask-login==0.4.1        # via flask-user
+flask-mail==0.9.1         # via flask-user
 flask-migrate==2.2.1
 flask-oauthlib==0.9.5
 flask-recaptcha==0.4.2
@@ -34,62 +34,62 @@ flask-swagger==0.2.13
 flask-testing==0.7.1
 flask-user==0.6.21 # pyup: <0.7 # pin until 1.0 is ready for prod
 flask-webtest==0.0.9
-flask-wtf==0.14.2
 functools32==3.2.3.post2;python_version < '3'
+flask-wtf==0.14.2         # via flask-user
 flask==1.0.2
 fuzzywuzzy==0.16.0
 gunicorn==19.8.1
-idna==2.7
-imagesize==1.0.0
-itsdangerous==0.24
-jinja2==2.10
+idna==2.7                 # via requests
+imagesize==1.0.0          # via sphinx
+itsdangerous==0.24        # via flask
+jinja2==2.10              # via flask, flask-babel, sphinx
 jsonschema==2.6.0
-kombu==4.2.1
-mako==1.0.7
-markupsafe==1.0
+kombu==4.2.1              # via celery
+mako==1.0.7               # via alembic
+markupsafe==1.0           # via jinja2, mako
 nose==1.3.7
 oauthlib==1.1.2 # pyup: <= 1.1.2  # See oauthlib comment below
-packaging==17.1
+packaging==17.1           # via sphinx, tox
 page-objects==1.1.0
-passlib==1.7.1
-pluggy==0.6.0
+passlib==1.7.1            # via flask-user
+pluggy==0.6.0             # via tox
 polib==1.1.0
 psycopg2==2.7.5
-py==1.5.4
-pycparser==2.18
-pycryptodome==3.6.4
-pygments==2.2.0
-pyparsing==2.2.0
+py==1.5.4                 # via tox
+pycparser==2.18           # via cffi
+pycryptodome==3.6.4       # via flask-user
+pygments==2.2.0           # via sphinx
+pyparsing==2.2.0          # via packaging
 python-dateutil==2.7.3
-python-editor==1.0.3
+python-editor==1.0.3      # via alembic
 python-levenshtein==0.12.0
-python-memcached==1.59
-pytz==2018.5
-pyyaml==3.13
+python-memcached==1.59    # via flask-dogpile-cache
+pytz==2018.5              # via babel, celery
+pyyaml==3.13              # via flask-swagger, swagger-spec-validator
 redis==2.10.6
 regex==2018.06.21
 requests-cache==0.4.13
-requests-oauthlib==1.0.0
-requests==2.19.1
+requests-oauthlib==1.0.0  # via flask-oauthlib
+requests==2.19.1          # via flask-recaptcha, requests-cache, requests-oauthlib, sphinx
 selenium==3.13.0
-six==1.11.0
-snowballstemmer==1.2.1
+six==1.11.0               # via bcrypt, packaging, python-dateutil, python-memcached, sphinx, swagger-spec-validator, tox, validators, webtest
+snowballstemmer==1.2.1    # via sphinx
 sphinx-rtd-theme==0.4.0
 sphinx==1.7.5
-sphinxcontrib-websupport==1.1.0
-sqlalchemy==1.2.9
+sphinxcontrib-websupport==1.1.0  # via sphinx
+sqlalchemy==1.2.9         # via alembic, flask-sqlalchemy
 swagger-spec-validator==2.3.1
 tox==3.1.2
 validators==0.10.1 # pyup: <=0.10.1 # pin until require_tld supported again
-typing==3.6.4
-urllib3==1.23
-vine==1.1.4
-virtualenv==16.0.0
-waitress==1.1.0
-webob==1.8.2
-webtest==2.0.30
-werkzeug==0.14.1
-wtforms==2.2.1
+typing==3.6.4             # via sphinx
+urllib3==1.23             # via requests
+vine==1.1.4               # via amqp
+virtualenv==16.0.0        # via tox
+waitress==1.1.0           # via webtest
+webob==1.8.2              # via webtest
+webtest==2.0.30           # via flask-webtest
+werkzeug==0.14.1          # via flask
+wtforms==2.2.1            # via flask-wtf
 xvfbwrapper==0.2.9
 -e .
 
